--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,12 +7,33 @@
     <script src="script.js"></script>
   </head>
   <body>
+    <div id="banner">
+        <h1>Welcome to Lee's Portfolio</h1>
+    </div>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <img src ="/images/avatar.jpg" alt="Lee's profile picture" class="avatar">
+      <h3 class="center-text">Hi, I'm Lee.</h3> 
+      <p id="about-me"> I am a rising sophomore at Yale University.  I am interested in UX and front-end development.  
+          My goal is to make accessible and intuitive platforms accessible to everyone.  I am majoring in computer science
+          while also taking classes in psychology and visual arts.  In my free time,  I enjoy making music, painting, playing 
+          with my cat, and trying new things.
+          </p> 
+    <div class="box">    
+        <h3 class="center-text">Past Projects and Experiences:</h3> 
+        <div class="row">
+            <div class="column center-text">
+                <a href="https://www.linkedin.com/in/lee-chen-5364a218b/">LinkedIn</a>
+            </div>
+            <div class="column center-text">
+                <a href="https://github.com/leeannachen">Github</a>
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <h3 class="center-text">Bonus:</h3> 
+        <button onclick="addRandomGreeting()"> Click for a random fact about me :) </button>
+        <div id="greeting-container"></div>
+
     </div>
   </body>
 </html>
