--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,15 +4,122 @@
     <meta charset="UTF-8">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Muli:wght@300&display=swap" rel="stylesheet">
     <script src="script.js"></script>
-  </head>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>  </head>
   <body>
-    <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+
+    <div class="container navbar">
+      <header>
+        <div class="nav-name">
+          <h1>Lee</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
     </div>
+
+    <div class="space" id="top"></div>
+
+    <div class="container main-info-section">
+      <div class="text">
+        <h1>
+          <span>H</span>
+          <span class="m-left">e</span>
+          <span class="m-left">l</span>
+          <span class="m-left">l</span>
+          <span class="m-left">o</span>
+          <span class="m-left">,</span>
+          <br>
+          <span>I</span>
+          <span class="m-left">'</span>
+          <span class="m-left">m</span>
+          <span class="m-left"> </span>
+          <span class="m-left name">L</span>
+          <span class="m-left name">e</span>
+          <span class="m-left name">e</span>
+        </h1>
+        <p>Interning at Google in the summer of 2020 <br> Part of Student Training in Engineering Program</p>
+        <a href="#about" onclick="addRandomGreeting()">begin</a>
+      </div>
+      <div class="avatar">
+        <img src="./image/avatar.JPG" alt="Lee's profile picture">
+      </div>
+    </div>
+
+    <div class="space" id="about"></div>
+
+    <div class="container about">
+      <h1>About Me</h1>
+      <div class="about-me-info">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+        <img src="./image/red.jpg" alt="">
+        <div class="secret-message"><div id="message-container"></div></div>
+      </div>
+    </div>
+
+    <div class="space" id="skills"></div>
+    <div class="container skills">
+      <h1>Skills</h1>
+      <p class="skills-info"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+      <div class="html">
+        <div class="tag-html">
+          <p>HTML/CSS</p>
+        </div>
+        <div class="progressbar">
+          <div class="bar-html"></div>
+        </div>
+      </div>
+      <div class="html">
+        <div class="tag-javascript">
+          <p>JavaScipt</p>
+        </div>
+        <div class="progressbar">
+          <div class="bar-javascript"></div>
+        </div>
+      </div>
+      <div class="html">
+        <div class="tag-python">
+          <p>Python</p>
+        </div>
+        <div class="progressbar">
+          <div class="bar-python"></div>
+        </div>
+      </div>
+      <div class="html">
+        <div class="tag-java">
+          <p>Java</p>
+        </div>
+        <div class="progressbar">
+          <div class="bar-java"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="space" id="contact"></div>
+
+    <div class="container contact">
+      <h1>Reach me</h1>
+      <div class="contact-me ">
+        <!-- this is where i want to insert my linkedin badge -->
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <!-- this is where i want to insert my github iframe -->
+      </div>
+        <img src="./image/red.jpg" alt="" id="reach-red-ball">
+    </div>
+  </div>
+
+  <script src="/js/ScrollMagic.min.js"></script>
+  <script src="/js/animation.gsap.min.js"></script>
+  <script src="/js/TimelineLite.min.js"></script>
+  <script src="/js/TweenMax.min.js"></script>
+  <script src="/js/CSSPlugin.min.js"></script>
+  <script src="/js/script.js"></script>
   </body>
 </html>
