--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,17 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Lee's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Muli:wght@300&display=swap" rel="stylesheet">
     <script src="script.js"></script>
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>  </head>
+    <script src="https://kit.fontawesome.com/d691fbec03.js" crossorigin="anonymous"></script>
+  </head>
   <body>
 
     <div class="container navbar">
       <header>
         <div class="nav-name">
-          <h1>Lee</h1>
+          <a href="#"><h1>Lee</h1></a>
         </div>
         <nav>
           <ul>
@@ -57,7 +58,10 @@
     <div class="container about">
       <h1>About Me</h1>
       <div class="about-me-info">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>I am a rising sophomore at Yale University.  I am interested in UX and front-end development.
+        My goal is to make accessible and intuitive technology for everyone but especially for elders.
+        I am majoring in computer science while also taking classes in psychology and visual arts. In my free time, I enjoy making music,
+      creating art, baking pastries, and trying new things. </p>
       </div>
         <img src="./image/red.jpg" alt="">
         <div class="secret-message"><div id="message-container"></div></div>
@@ -67,13 +71,15 @@
     <div class="space" id="skills"></div>
     <div class="container skills">
       <h1>Skills</h1>
-      <p class="skills-info"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+      <p class="skills-info"> In past projects, I have mainly worked on designating tasks and handling the front-end components.
+        I love art, so I enjoy using HTML/CSS and frameworks like React and Bootstrap to create aesthetic and straightforward platforms.
+        In my free time, I am also taking a self-paced full stack web developer course to enhance my understanding of Python and Django, JavaScript, and jQuery. </p>
       <div class="html">
         <div class="tag-html">
           <p>HTML/CSS</p>
         </div>
         <div class="progressbar">
-          <div class="bar-html"></div>
+          <div class="bar-html" id="htmlBar"></div>
         </div>
       </div>
       <div class="html">
@@ -81,7 +87,7 @@
           <p>JavaScipt</p>
         </div>
         <div class="progressbar">
-          <div class="bar-javascript"></div>
+          <div class="bar-javascript" id="jsBar"></div>
         </div>
       </div>
       <div class="html">
@@ -89,15 +95,15 @@
           <p>Python</p>
         </div>
         <div class="progressbar">
-          <div class="bar-python"></div>
+          <div class="bar-python" id="pythonBar"></div>
         </div>
       </div>
       <div class="html">
         <div class="tag-java">
           <p>Java</p>
         </div>
-        <div class="progressbar">
-          <div class="bar-java"></div>
+        <div class="progressbar" >
+          <div class="bar-java" id="javaBar"></div>
         </div>
       </div>
     </div>
@@ -106,20 +112,16 @@
 
     <div class="container contact">
       <h1>Reach me</h1>
+      <div class="space" id="contact"></div>
       <div class="contact-me ">
-        <!-- this is where i want to insert my linkedin badge -->
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <!-- this is where i want to insert my github iframe -->
+        <!-- Not sure why the icons links move down with a:hover -->
+        <a href="https://github.com/leeannachen"><i class="fab fa-github-square fa-5x"></i></a>
+        <a href="https://www.linkedin.com/in/unavailable/"> <i class="fab fa-linkedin fa-5x"></i> </a>
+        <a href="mailto:chenlee@google.com?subject=website"> <i class="fas fa-envelope-square fa-5x"></i></a>
       </div>
         <img src="./image/red.jpg" alt="" id="reach-red-ball">
     </div>
   </div>
 
-  <script src="/js/ScrollMagic.min.js"></script>
-  <script src="/js/animation.gsap.min.js"></script>
-  <script src="/js/TimelineLite.min.js"></script>
-  <script src="/js/TweenMax.min.js"></script>
-  <script src="/js/CSSPlugin.min.js"></script>
-  <script src="/js/script.js"></script>
   </body>
 </html>
