--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -52,6 +52,9 @@
         <img src="./image/avatar.JPG" alt="Lee's profile picture">
       </div>
     </div>
+    <div class="center">
+      <a href="#about"> <i class="fas fa-chevron-down fa-5x"></i> </a>
+    </div>
 
     <div class="space" id="about"></div>
 
@@ -67,13 +70,16 @@
         <div class="secret-message"><div id="message-container"></div></div>
       </div>
     </div>
+    <div class="center">
+      <a href="#skills"> <i class="fas fa-chevron-down fa-5x"></i> </a>
+    </div>
 
     <div class="space" id="skills"></div>
     <div class="container skills">
       <h1>Skills</h1>
       <p class="skills-info"> In past projects, I have mainly worked on designating tasks and handling the front-end components.
         I love art, so I enjoy using HTML/CSS and frameworks like React and Bootstrap to create aesthetic and straightforward platforms.
-        In my free time, I am also taking a self-paced full stack web developer course to enhance my understanding of Python and Django, JavaScript, and jQuery. </p>
+        With my free time, I am taking a self-paced full stack web developer course to enhance my understanding of Python and Django, JavaScript, and jQuery. </p>
       <div class="html">
         <div class="tag-html">
           <p>HTML/CSS</p>
@@ -107,6 +113,11 @@
         </div>
       </div>
     </div>
+    <div class="center">
+      <a href="#contact"> <i class="fas fa-chevron-down fa-5x"></i> </a>
+    </div>
+    <div class="space"></div>
+
 
     <div class="space" id="contact"></div>
 
