use fetch() on data page

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="center">
-      <a href="#about"> <i class="fas fa-chevron-down fa-5x"></i> </a>
+      <a href="#about"> <i class="fas fa-chevron-down fa-5x" id="to-contact"></i> </a>
     </div>
 
     <div class="space" id="about"></div>
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="center">
-      <a href="#skills"> <i class="fas fa-chevron-down fa-5x"></i> </a>
+      <a href="#skills"> <i class="fas fa-chevron-down fa-5x" id="to-skills"></i> </a>
     </div>
 
     <div class="space" id="skills"></div>
@@ -114,7 +114,7 @@
       </div>
     </div>
     <div class="center">
-      <a href="#contact"> <i class="fas fa-chevron-down fa-5x"></i> </a>
+      <a href="#contact"> <i class="fas fa-chevron-down fa-5x" id="to-about"></i> </a>
     </div>
     <div class="space"></div>
 
