--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -131,7 +131,12 @@
       </div>
         <img src="./image/red.jpg" alt="" id="reach-red-ball">
     </div>
-  </div>
 
+    <div class="container comments">
+      <h1>Comments</h1>
+      <button onclick="getComments()">Click here to see comments:</button>
+      <div id="comment-container"></div>
+    </div>
+  </div>
   </body>
 </html>
