--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -138,10 +138,11 @@
       <div id="comment-container"></div>
       <div class="space"></div>
         
-        <h1>Todo List</h1>
+        <h1>Leave a comment :) </h1>
 
         <form method="POST" action="/new-task">
-        <input type="text" name="title" />
+        <input type="text" name="title"  placeholder="message"/>
+        <input type="text" name="user"  placeholder="name"/>
         <br/>
         <button>Submit</button>
         </form>
