delete extra functions

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/d691fbec03.js" crossorigin="anonymous"></script>
   </head>
-  <body onload="loadComments()">>
+  <body onload="loadComments()">
 
     <div class="container navbar">
       <header>
@@ -135,11 +135,6 @@
     </div>
 
     <div class="container comments" id="end">
-      <h1>Comments</h1>
-      <button onclick="getComments()">Click here to see comments:</button>
-      <div id="comment-container"></div>
-      <div class="space"></div>
-        
         <h1>Leave a comment :) </h1>
 
         <form method="POST" action="/new-comment">
