--- a/walkthroughs/week-4-libraries/maps/examples/info-window/src/main/webapp/index.html
+++ b/walkthroughs/week-4-libraries/maps/examples/info-window/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Google Maps Info Window Example</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTkaBUiXmTof1JeMXiplYaeTZ39ms4DNU"></script>
   <script src="script.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
