--- a/walkthroughs/week-4-libraries/maps/examples/hello-world/src/main/webapp/index.html
+++ b/walkthroughs/week-4-libraries/maps/examples/hello-world/src/main/webapp/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Hello Google Maps</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTkaBUiXmTof1JeMXiplYaeTZ39ms4DNU&callback=initMap"
+  type="text/javascript"></script>
   <script src="script.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
