"maven dependency for authentication"

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -139,6 +139,7 @@
  
     <div class="container comments" id="map-section">
         <h1>Map</h1>
+        <p>mapping out my story</P>
         <div id="map"></div>
     </div>
 
@@ -172,12 +173,6 @@
         </form>
     </div>
     
-    <div class="container" id="map-section">
-        <h1>Map</h1> <br>
-        <p>Mapping out my story</p>
-        <div id="map"></div>
-    </div>
- 
     <!-- key=AIzaSyDTkaBUiXmTof1JeMXiplYaeTZ39ms4DNU -->
     <script async defer 
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTkaBUiXmTof1JeMXiplYaeTZ39ms4DNU&callback=initMap">
