--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -139,7 +139,7 @@
  
     <div class="container comments" id="map-section">
         <h1>Map</h1>
-        <p>mapping out my story</P>
+        <p>mapping out my story</p>
         <div id="map"></div>
     </div>
 
