--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -82,7 +82,7 @@
       creating art, baking pastries, and trying new things. </p>
       </div>
         <img src="./image/red.jpg" alt="">
-        <div class="secret-message"><div id="message-container"></div></div>
+        <!-- <div class="secret-message"><div id="message-container"></div></div> -->
       </div>
     </div>
     <div class="center">
