--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -34,6 +34,8 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact">Map</a></li>
+            <li><a href="#comments-section">Comments</a></li>
           </ul>
         </nav>
       </header>
@@ -82,7 +84,7 @@
       creating art, baking pastries, and trying new things. </p>
       </div>
         <img src="./image/red.jpg" alt="">
-        <!-- <div class="secret-message"><div id="message-container"></div></div> -->
+        <div class="secret-message"><div id="message-container"></div></div>
       </div>
     </div>
     <div class="center">
@@ -147,23 +149,34 @@
       </div>
         <img src="./image/red.jpg" alt="" id="reach-red-ball">
     </div>
- 
-    <div class="container comments" id="map-section">
-        <h1>Map</h1>
-        <p>mapping out my story</p>
-        <div id="map"></div>
+
+    <div class="center">
+      <a href="#map-section"> <i class="fas fa-chevron-down fa-5x" id="to-map"></i> </a>
     </div>
 
-    <div class="container comments" id="login-section">
+    <div class="space" id="map-section"></div>
+    <div class="container comments">
+        <h1 id="maptitle">Story Map</h1>
+        <div class="map-div">
+          <div id="map"></div>
+        </div>
+    </div>
+
+    <div class="center">
+      <a href="#comments-section"> <i class="fas fa-chevron-down fa-5x" id="to-comments"></i> </a>
+    </div>
+    <!-- <div class="container comments" id="login-section">
     <div class="space" id="contact"></div>
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
         <a href="#" onclick="signOut();">Sign out</a>
-    </div>
+    </div> -->
 
-    <div class="container comments" id="comments-section">
+    <div class="space" id="comments-section"></div>
+    <div class="container comments">
 
-        <h1>Leave a comment :) </h1>
-    
+        <h1>Comments</h1>
+        <h2>Leave a comment :) </h2>
+
         <div>
         <form method="POST" action="/new-comment">
             <label for= "user">Name</label> <br>
@@ -189,9 +202,10 @@
                 <option value="50">50</option>
         </form>
     </div>
-    
+    </div>
+
     <!-- key=AIzaSyDTkaBUiXmTof1JeMXiplYaeTZ39ms4DNU -->
-    <script async defer 
+    <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTkaBUiXmTof1JeMXiplYaeTZ39ms4DNU&callback=initMap">
 
     </script>
