--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <title>Lee's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
     <!-- font style -->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Muli:wght@300&display=swap" rel="stylesheet">
     <!-- contact icons  -->
     <script src="https://kit.fontawesome.com/d691fbec03.js" crossorigin="anonymous"></script>
     <!-- bootstrap -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
@@ -20,14 +19,74 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!-- Meta for Google Client ID -->
     <meta name="google-signin-client_id" content="212552288471-sc76ngldi2jo6u3qva3hogvdt5i49cgr.apps.googleusercontent.com">
-
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
 
+  <body>
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="d-flex flex-grow-1">
+            <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
+            <a class="navbar-brand d-none d-lg-inline-block" href="#">
+                Lee
+            </a>
+            <a class="navbar-brand mx-auto d-lg-none d-inline-block" href="#">
+                Lee
+            </a>
+            <div class="w-100 text-right">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </div>
+        <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
+            <ul class="navbar-nav ml-auto flex-nowrap">
+                <li class="nav-item">
+                    <a href="../work.html" class="nav-link m-2 menu-item nav-active">Work</a>
+                </li>
+                <li class="nav-item">
+                    <a href="../resume.html" class="nav-link m-2 menu-item">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a href="../about.html" class="nav-link m-2 menu-item">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./contact" class="nav-link m-2 menu-item">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Footer -->
+    <footer class="footer font-small special-color-dark pt-4">
+        <div class="container">
+            <!-- <div class="text-center py-2">
+               see more on:
+            </div> -->
+            <!-- Social buttons -->
+            <ul class="list-unstyled list-inline text-right">
+            <li> fine me on: </li>
+            <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/lee-chen/" class="btn-floating btn-li mx-1">
+                <i class="fab fa-linkedin-in"> </i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="https://github.com/leeannachen" class="btn-floating btn-github mx-1">
+                <i class="fab fa-github"> </i>
+                </a>
+            </li>
+            </ul>
+        </div>
+    </footer>
+  </body>
+</html> 
+<!-- 
     <div class="container navbar">
       <header>
         <div class="nav-name">
-          <a href="#"><h1>Lee</h1></a>
+          <a href="#" class="navbar-brand"><h1>Lee</h1></a>
         </div>
         <nav>
           <ul>
@@ -39,7 +98,20 @@
           </ul>
         </nav>
       </header>
-    </div>
+    </div> -->
+
+    <!-- <nav class="navbar navbar-dark bg-dark">
+        <ul>
+            <li><a href="#" class="navbar-brand">Lee</a></li>
+            <li><a href="#about">Work</a></li>
+            <div class="collapse navbar-collapse">
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#comments-section">For Fun</a></li>
+            </div>
+        </ul>
+    </nav>
 
     <div class="space" id="top"></div>
 
@@ -140,9 +212,9 @@
 
     <div class="container contact">
       <h1>Reach me</h1>
-      <div class="contact-me ">
+      <div class="contact-me "> -->
         <!-- Not sure why the icons links move down with a:hover -->
-        <a href="https://github.com/leeannachen"><i class="fab fa-github-square fa-5x"></i></a>
+        <!-- <a href="https://github.com/leeannachen"><i class="fab fa-github-square fa-5x"></i></a>
         <a href="https://www.linkedin.com/in/lee-chen/"> <i class="fab fa-linkedin fa-5x"></i> </a>
 
         <a href="mailto:chenlee@google.com?subject=website"> <i class="fas fa-envelope-square fa-5x"></i></a>
@@ -164,14 +236,14 @@
 
     <div class="center">
       <a href="#comments-section"> <i class="fas fa-chevron-down fa-5x" id="to-comments"></i> </a>
-    </div>
+    </div> -->
     <!-- <div class="container comments" id="login-section">
     <div class="space" id="contact"></div>
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
         <a href="#" onclick="signOut();">Sign out</a>
     </div> -->
 
-    <div class="space" id="comments-section"></div>
+    <!-- <div class="space" id="comments-section"></div>
     <div class="container comments">
 
         <h1>Comments</h1>
@@ -202,12 +274,12 @@
                 <option value="50">50</option>
         </form>
     </div>
-    </div>
+    </div> -->
 
     <!-- key=AIzaSyDTkaBUiXmTof1JeMXiplYaeTZ39ms4DNU -->
-    <script async defer
+    <!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTkaBUiXmTof1JeMXiplYaeTZ39ms4DNU&callback=initMap">
 
-    </script>
+    </script> 
   </body>
-</html>
+</html> -->
