bug found: map display error on about me page

--- a/portfolio/src/main/webapp/portfolio.html
+++ b/portfolio/src/main/webapp/portfolio.html
@@ -67,7 +67,7 @@
         <div class="container">
             <!-- Social buttons -->
             <ul class="list-unstyled list-inline text-right">
-            <li> fine me on: </li>
+            <li> find me on: </li>
             <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/lee-chen/" class="btn-floating btn-li mx-1">
                 <i class="fab fa-linkedin-in"> </i>
