--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -78,8 +78,8 @@
             <span class="m-left name">e</span>
             <span class="m-left name">e</span>
             </h1>
-            <p>Let's bring people together with intuitive and accessible technology</p>
-            <a href="../portfolio">Portfolio</a>
+            <p>Let's bring people together with <strong>intuitive</strong> and <strong>accessible</strong> technology</p>
+            <a href="../portfolio.html">Portfolio</a>
         </div>
 
         <div class="avatar col-lg-6 col-sm-12">
