--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -52,7 +52,7 @@
                     <a href="../about.html" class="nav-link m-2 menu-item">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./contact" class="nav-link m-2 menu-item">Contact</a>
+                    <a href="../contact.html" class="nav-link m-2 menu-item">Contact</a>
                 </li>
             </ul>
         </div>
