update contact page with reachable methods

--- a/portfolio/src/main/webapp/contact.html
+++ b/portfolio/src/main/webapp/contact.html
@@ -52,7 +52,7 @@
                     <a href="../about.html" class="nav-link m-2 menu-item">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../contact" class="nav-link m-2 menu-item">Contact</a>
+                    <a href="../contact.html" class="nav-link m-2 menu-item">Contact</a>
                 </li>
             </ul>
         </div>
@@ -60,22 +60,19 @@
 
     <!-- Main -->
     <div class="container main-info-section contact-section">
-        <div class="block">
-            <div class="card w-100  text-white bg-dark">
-            <div class="card-header">
-                Let's chat
-            </div>
-            <div class="card-body contact-me">
-            <a href="https://github.com/leeannachen"><i class="fab fa-github-square fa-5x"></i></a>
-            <a href="https://www.linkedin.com/in/lee-chen/"> <i class="fab fa-linkedin fa-5x"></i> </a>
-            <a href="mailto:chenlee@google.com?subject=website"> <i class="fas fa-envelope-square fa-5x"></i></a>
-      </div>
-        <img src="./image/red.jpg" alt="" id="reach-red-ball">
+        <div class="card w-100  text-white bg-dark">
+        <div class="card-header">
+            Love to be in touch ☺
+        </div>
+        <div class="card-body contact-me">
+            <a href="https://www.linkedin.com/in/lee-chen/"> <i class="fab fa-linkedin fa-6x"></i> </a>
+            <a href="https://github.com/leeannachen"><i class="fab fa-github-square fa-6x"></i></a>
+            <a href="mailto:chenlee@google.com?subject=website"> <i class="fas fa-envelope-square fa-6x"></i></a>
+        </div>
+        </div>
     </div>
-            </div>
-            </div>
-        </block>
-    </div>
+    <!-- TODO: Comment section -->
+
 
     <!-- Footer -->
     <footer class="footer font-small special-color-dark pt-4">
