--- a/portfolio/src/main/webapp/about.html
+++ b/portfolio/src/main/webapp/about.html
@@ -26,7 +26,7 @@
     <script src="../about.js"></script>
   </head>
 
-  <body onload="createMap()">
+  <body>
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="d-flex flex-grow-1">
@@ -55,7 +55,7 @@
                     <a href="../about.html" class="nav-link m-2 menu-item">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../contact" class="nav-link m-2 menu-item">Contact</a>
+                    <a href="../contact.html" class="nav-link m-2 menu-item">Contact</a>
                 </li>
             </ul>
         </div>
