fix nav bar issue

--- a/portfolio/src/main/webapp/about.html
+++ b/portfolio/src/main/webapp/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <title>Lee's Portfolio</title>
+    <!-- <script src="script.js"></script> -->
     <!-- font style -->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Muli:wght@300&display=swap" rel="stylesheet">
     <!-- contact icons  -->
@@ -19,11 +20,7 @@
     <!-- Meta for Google Client ID -->
     <meta name="google-signin-client_id" content="212552288471-sc76ngldi2jo6u3qva3hogvdt5i49cgr.apps.googleusercontent.com">
     <!-- stylesheet -->
-    <link rel="stylesheet" href="style.css">.
-    <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTkaBUiXmTof1JeMXiplYaeTZ39ms4DNU"></script>
-    <!-- script -->
-    <script src="../about.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
